--- a/generation/Dockerfile
+++ b/generation/Dockerfile
@@ -1,11 +1,17 @@
-FROM eclipse-temurin:21-jdk
+FROM eclipse-temurin:17-jdk
 
 WORKDIR /app
 
+# Copy everything (except what .dockerignore excludes)
 COPY . .
 
-RUN chmod +x mvnw && ./mvnw clean package -DskipTests
+# Give execute permission to mvnw (IMPORTANT)
+RUN chmod +x mvnw
+
+# Build the jar inside the container
+RUN ./mvnw clean package -DskipTests
 
 EXPOSE 8080
 
-CMD ["java", "-jar", "target/*.jar"]
+# Use the exact jar name (NO wildcard)
+CMD ["java", "-jar", "target/generation-0.0.1-SNAPSHOT.jar"]
