removed : from the shhet id

--- a/generation/src/main/resources/application.properties
+++ b/generation/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.port=${PORT:8080}
 # spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 
 # Google Sheets (Optional - for reference)
-google.spreadsheet.id=${GOOGLE_SPREADSHEET_ID:}
+google.spreadsheet.id=${GOOGLE_SPREADSHEET_ID}
 
 
 
