--- a/generation/src/main/resources/application.properties
+++ b/generation/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=generation
 spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+spring.mail.port=465
 spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 server.port=${PORT:8080}
 # Profile
 # spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
