--- a/generation/pom.xml
+++ b/generation/pom.xml
@@ -69,6 +69,14 @@
 			<version>1.23.0</version>
 		</dependency>
 
+		<!-- Email API -->
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>4.12.0</version>
+		</dependency>
+
+
 		<!-- Google HTTP client (REST calls) -->
 		<dependency>
 			<groupId>com.google.http-client</groupId>
