--- a/generation/src/main/resources/application.properties
+++ b/generation/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.application.name=generation
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=${MAIL_USERNAME}
-spring.mail.password=${MAIL_PASSWORD}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
+
 
 server.port=${PORT:8080}
 
 google.spreadsheet.id=${GOOGLE_SPREADSHEET_ID}
+
+resend.api.key=${RESEND_API_KEY}
+
+email.from=${EMAIL_FROM}
+email.cc=${EMAIL_CC}
+email.bcc=${EMAIL_BCC}
+
