updated email and the email service

--- a/generation/src/main/resources/application.properties
+++ b/generation/src/main/resources/application.properties
@@ -6,8 +6,16 @@ server.port=${PORT:8080}
 
 google.spreadsheet.id=${GOOGLE_SPREADSHEET_ID}
 
-resend.api.key=${RESEND_API_KEY}
+# Generic Email Service
+email.api.url=${EMAIL_API_URL}
 
+# SMTP Configuration
+email.smtp.host=${EMAIL_SMTP_HOST}
+email.smtp.port=${EMAIL_SMTP_PORT}
+email.smtp.user=${EMAIL_SMTP_USER}
+email.smtp.password=${EMAIL_SMTP_PASSWORD}
+
+# Email addresses
 email.from=${EMAIL_FROM}
 email.cc=${EMAIL_CC}
 email.bcc=${EMAIL_BCC}
