--- a/generation/src/main/resources/application.properties
+++ b/generation/src/main/resources/application.properties
@@ -1,22 +1,14 @@
 spring.application.name=generation
 
-
-
 server.port=${PORT:8080}
 
 google.spreadsheet.id=${GOOGLE_SPREADSHEET_ID}
 
-# Generic Email Service
-email.api.url=${EMAIL_API_URL}
 
-# SMTP Configuration
-email.smtp.host=${EMAIL_SMTP_HOST}
-email.smtp.port=${EMAIL_SMTP_PORT}
-email.smtp.user=${EMAIL_SMTP_USER}
-email.smtp.password=${EMAIL_SMTP_PASSWORD}
+maileroo.api.url=${MAILEROO_API_URL}
+maileroo.api.key=${MAILEROO_API_KEY}
 
-# Email addresses
-email.from=${EMAIL_FROM}
+email.from=${EMAIL_FROM:The Tinkori Tales}
 email.cc=${EMAIL_CC}
 email.bcc=${EMAIL_BCC}
 
