--- a/generation/src/main/resources/application.properties
+++ b/generation/src/main/resources/application.properties
@@ -5,10 +5,14 @@ server.port=${PORT:8080}
 google.spreadsheet.id=${GOOGLE_SPREADSHEET_ID}
 
 
-maileroo.api.url=${MAILEROO_API_URL}
+
+maileroo.api.url=${MAILEROO_API_URL:https://smtp.maileroo.com/api/v2/emails}
 maileroo.api.key=${MAILEROO_API_KEY}
 
-email.from=${EMAIL_FROM:The Tinkori Tales}
+
+email.from.address=${EMAIL_FROM_ADDRESS:thetinkoritales@3bf23394c95526b8.maileroo.org}
+email.from.display=${EMAIL_FROM_DISPLAY:The Tinkori Tales}
+
+
 email.cc=${EMAIL_CC}
 email.bcc=${EMAIL_BCC}
-
