commented out the comments

--- a/generation/src/main/resources/application.properties
+++ b/generation/src/main/resources/application.properties
@@ -6,11 +6,11 @@ google.spreadsheet.id=${GOOGLE_SPREADSHEET_ID}
 
 
 
-maileroo.api.url=${MAILEROO_API_URL:https://smtp.maileroo.com/api/v2/emails}
+maileroo.api.url=${MAILEROO_API_URL}
 maileroo.api.key=${MAILEROO_API_KEY}
 
 
-email.from.address=${EMAIL_FROM_ADDRESS:thetinkoritales@3bf23394c95526b8.maileroo.org}
+email.from.address=${EMAIL_FROM_ADDRESS}
 email.from.display=${EMAIL_FROM_DISPLAY:The Tinkori Tales}
 
 
