--- a/generation/src/main/resources/application.properties
+++ b/generation/src/main/resources/application.properties
@@ -10,9 +10,27 @@ maileroo.api.url=${MAILEROO_API_URL}
 maileroo.api.key=${MAILEROO_API_KEY}
 
 
-email.from.address=${EMAIL_FROM_ADDRESS}
+# email.from.address=${EMAIL_FROM_ADDRESS}
 email.from.display=${EMAIL_FROM_DISPLAY}
 
 
+# email.cc=${EMAIL_CC}
+# email.bcc=${EMAIL_BCC}
+
+
+# External Generic Email Service
+email.api.url=${GENERIC_EMAIL_API_URL}
+
+# SMTP config (passed to external service)
+email.smtp.host=${SMTP_HOST}
+email.smtp.port=${SMTP_PORT}
+email.smtp.user=${SMTP_USER}
+email.smtp.password=${SMTP_PASSWORD}
+
+# Email metadata
+email.from.address=${EMAIL_FROM_ADDRESS}
+
+# Optional (safe defaults)
 email.cc=${EMAIL_CC}
 email.bcc=${EMAIL_BCC}
+
