feat(email): add configurable from display, cc/bcc, and reply-to support
- Made email display name configurable via environment variable
- Added optional cc and bcc support to generic email payload
- Added reply-to support for better email responses
- Cleaned up unused Maileroo and SMTP host/port configurations
- Updated application properties to reflect new email configuration

--- a/generation/src/main/resources/application.properties
+++ b/generation/src/main/resources/application.properties
@@ -4,35 +4,18 @@ server.port=${PORT:8080}
 
 google.spreadsheet.id=${GOOGLE_SPREADSHEET_ID}
 
-
-
-maileroo.api.url=${MAILEROO_API_URL}
-maileroo.api.key=${MAILEROO_API_KEY}
-
-
-# email.from.address=${EMAIL_FROM_ADDRESS}
-email.from.display=${EMAIL_FROM_DISPLAY}
-
-
-# email.cc=${EMAIL_CC}
-# email.bcc=${EMAIL_BCC}
-
-
-# External Generic Email Service
 email.api.url=${GENERIC_EMAIL_API_URL}
 
-# SMTP config (passed to external service)
-email.smtp.host=${SMTP_HOST}
-email.smtp.port=${SMTP_PORT}
 email.smtp.user=${SMTP_USER}
 email.smtp.password=${SMTP_PASSWORD}
 
-# Email metadata
 email.from.address=${EMAIL_FROM_ADDRESS}
 
-# Optional (safe defaults)
 email.cc=${EMAIL_CC}
 email.bcc=${EMAIL_BCC}
 
 email.secret.key=${SECRET_KEY}
+email.from.display=${EMAIL_FROM_DISPLAY}
+email.replyto=${REPLY_TO}
+
 
